--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -22,7 +22,7 @@
         <p class="title1"><b>you need in your</b></p>
         <p class="title2"><b>own home.</b></p>
         <nav>
-        <button mat-raised-button class='inquireBtn'><a class="inquirelink" routerLink="/login">Inquire</a></button></nav>
+        <button mat-raised-button class='inquireBtn'><a class="inquirelink" routerLink="/summary">Inquire</a></button></nav>
     </div>
     
     <div class="loginTabs">
