--- a/src/app/washingmachinedetails/washingmachinedetails.component.html
+++ b/src/app/washingmachinedetails/washingmachinedetails.component.html
@@ -11,19 +11,19 @@
       <div class="dashboardside">
         <mat-list-item (click)="closeSideNav()">
           <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
-          <a class="nav-btn" routerLink="/dashboard">Dashboard</a>
+          <a class="dashboard-btn" routerLink="/dashboard">Dashboard</a>
         </mat-list-item>
       </div>
-      <div class="dashboardside">
+      <div class="bookingside">
         <mat-list-item (click)="closeSideNav()">
           <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
-          <a class="nav-btn" routerLink="/booking">Book a Service</a>
+          <a class="booking-btn" routerLink="/booking">Book a Service</a>
         </mat-list-item>
       </div>
-      <div class="dashboardside">
+      <div class="profileside">
         <mat-list-item (click)="closeSideNav()">
           <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
-          <a class="nav-btn" routerLink="/profile">Profile</a>
+          <a class="profile-btn" routerLink="/profile">Profile</a>
         </mat-list-item>
       </div>
       <!-- <mat-list-item (click)="closeSideNav()">
@@ -40,6 +40,7 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
     </mat-toolbar>
+    
     <!--1st Stepper-->
     <mat-horizontal-stepper class="stepper" #stepper [linear]="true">
       <mat-step state="first" [completed]="unitdetailsForm.valid" [editable]="true">
@@ -100,21 +101,9 @@
             <br><br>
           </form>
         </div>
-
-        <mat-card class="details">
-          <div>
-            <mat-icon class="listicon">description</mat-icon>
-            <h1 class="detailssummary">Details Summary</h1>
-          </div>
-          <div class="row">
-            <div class="column">
-              <h4>Appliance: </h4> {{service_appliance}}
-            </div>
-          </div>
-        </mat-card>
       </mat-step>
 
-      <mat-step state="first" [completed]="locationForm.valid" [editable]="true">
+      <mat-step state="second" [completed]="locationForm.valid" [editable]="true">
         <div class="ds">
           <form [formGroup]="locationForm" (ngSubmit)="locationSubmit()">
             <ng-template matStepLabel>Service Location</ng-template>
@@ -172,28 +161,10 @@
             <br><br>
           </form>
         </div>
-
-        <mat-card class="details">
-          <div>
-            <mat-icon class="listicon">description</mat-icon>
-            <h1 class="detailssummary">Details Summary</h1>
-          </div>
-          <div class="row">
-            <div class="column">
-              <h4>Appliance: </h4> {{service_appliance}}
-              <h4>Brand: </h4> {{service_brand}}
-              <h4>Unit Problem: </h4> {{service_unitProb}}
-            </div>
-            <div class="column">
-              <h4>Type: </h4> {{service_aptype}}
-              <h4>Unit Type: </h4> {{service_unitType}}
-            </div>
-          </div>
-        </mat-card>
       </mat-step>
 
       <!--2nd Stepper-->
-      <mat-step state="second" [completed]="scheduleForm.valid" [editable]="true">
+      <mat-step state="third" [completed]="scheduleForm.valid" [editable]="true">
 
         <form [formGroup]="scheduleForm" (ngSubmit)="schedSubmit()">
           <div class="ds">
@@ -249,37 +220,10 @@
               matStepperNext>Next</button>
           </div>
         </form>
-
-        <br><br><br><br><br><br>
-        <mat-card class="details">
-          <div>
-            <mat-icon class="listicon">description</mat-icon>
-            <h1 class="detailssummary">Details Summary</h1>
-          </div>
-          <div class="summary">
-            <div class="row">
-              <div class="column">
-                <h4>Appliance: </h4> {{service_appliance}}
-                <h4>Brand: </h4> {{service_brand}}
-                <h4>Unit Problem: </h4> {{service_unitProb}}
-              </div>
-              <div class="column">
-                <h4>Type: </h4> {{service_aptype}}
-                <h4>Unit Type: </h4> {{service_unitType}}
-              </div>
-              <hr>
-              <div class="column">
-                <h4>City: </h4>{{service_city}}
-                <h4>Property Type: </h4>{{service_property_type}}
-                <h4>Zip Code: </h4>{{service_zipcode}}
-              </div>
-            </div>
-          </div>
-        </mat-card>
       </mat-step>
 
       <!--3rd Stepper-->
-      <mat-step state="third" [completed]="contactDetialsForm.valid" [editable]="true">
+      <mat-step state="final" [completed]="contactDetialsForm.valid" [editable]="true">
         <div class="ds">
           <form [formGroup]="contactDetialsForm" (ngSubmit)="contactDetailsSubmit()">
             <ng-template matStepLabel>Contact Details</ng-template>
@@ -371,90 +315,11 @@
 
             <!--Back and Next Button-->
             <button class="CDbackBtn" mat-button matStepperPrevious>Back</button>
-            <button class="CDnextBtn" type="submit" [disabled]="!contactDetialsForm.valid" mat-button matStepperNext>
-              Next
-            </button>
+            <button class="doneBtn" type="submit" [disabled]="!contactDetialsForm.valid" mat-button> Done </button>
           </form>
         </div>
-
-        <br><br><br><br><br><br>
-        <mat-card class="details">
-          <h1 class="text_summary">Summary</h1>
-          <div class="summary">
-            <div class="row">
-              <div class="column">
-                <h4>Appliance: </h4> {{service_appliance}}
-                <h4>Brand: </h4> {{service_brand}}
-                <h4>Unit Problem: </h4> {{service_unitProb}}
-              </div>
-              <div class="column">
-                <h4>Type: </h4> {{service_aptype}}
-                <h4>Unit Type: </h4> {{service_unitType}}
-              </div>
-              <hr>
-              <div class="column">
-                <h4>City: </h4>{{service_city}}
-                <h4>Property Type: </h4>{{service_property_type}}
-                <h4>Zip Code: </h4>{{service_zipcode}}
-              </div>
-              <hr>
-              <div class="column">
-                <h4>Date: </h4>{{service_date | date:"MM/dd/YYYY" }}
-                <h4>Time: </h4>{{service_timeslot}}
-              </div>
-            </div>
-          </div>
-        </mat-card>
       </mat-step>
 
-      <!--4th Stepper-->
-      <mat-step state="final">
-        <ng-template matStepLabel>Confirm Service Details</ng-template>
-        <div class="ds">
-          <mat-card class="details_sum">
-            <div>
-              <mat-icon class="listicon">description</mat-icon>
-              <h1 class="detailssummary">Details Summary</h1>
-            </div>
-            <div class="summary">
-              <div class="row">
-                <div class="column">
-                  <h4>Appliance: </h4> {{service_appliance}}
-                  <h4>Brand: </h4> {{service_brand}}
-                  <h4>Unit Problem: </h4> {{service_unitProb}}
-                </div>
-                <div class="column">
-                  <h4>Type: </h4> {{service_aptype}}
-                  <h4>Unit Type: </h4> {{service_unitType}}
-                </div>
-                <hr>
-                <div class="column">
-                  <h4>City: </h4>{{service_city}}
-                  <h4>Property Type: </h4>{{service_property_type}}
-                  <h4>Zip Code: </h4>{{service_zipcode}}
-                </div>
-                <hr>
-                <div class="column">
-                  <h4>Date: </h4>{{service_date | date:"MM/dd/YYYY" }}
-                  <h4>Time: </h4>{{service_timeslot}}
-                </div>
-                <hr>
-                <div class="column">
-                  <h4>Address:</h4>{{service_address}}
-                  <h4>First Name:</h4>{{service_firstname}}
-                  <h4>Last Name:</h4> {{service_lastname}}
-                </div>
-                <div class="column">
-                  <h4>Phone Number:</h4>{{service_phoneNumber }}
-                  <h4>Address Details:</h4>{{service_addressDetails}}
-                  <h4>Instructions:</h4> {{service_instruction}}
-                </div>
-              </div>
-            </div>
-          </mat-card>
-          <button class="doneBtn" (click)="servicedetailsSubmit()" mat-button>Done</button>
-        </div>
-      </mat-step>
     </mat-horizontal-stepper>
   </mat-sidenav-content>
 </mat-sidenav-container>
