--- a/src/app/bookingsummary/bookingsummary.component.css
+++ b/src/app/bookingsummary/bookingsummary.component.css
@@ -1,119 +1,376 @@
 .sidenav-container {
-    height: 100%;
-  }
-  .sidenav{
-    width: fit-content;
-    width: 280px;
-    background-color: #EAE2B7;
-  }
-  .mat-sidenav-content{
-     height: 910px;
-     background-color: white;
-  }
-  .mat-toolbar{
-    background-color: #D62828;
+  height: 100%;
+}
+.sidenav{
+  width: fit-content;
+  width: 280px;
+  background-color: #EAE2B7;
+}
+.mat-sidenav-content{
+   height: 910px;
+   background-color: white;
+}
+.mat-toolbar{
+  background-color: #D62828;
+  width: 100%;
+}
+.logo{
+  width: 180px;
+  height: 150px;
+  padding-top: 40px;
+  margin-left: 55px;
+}
+
+.dashtitle
+{
+  color: #003049;
+  font-size: 25px;
+  margin-left: 80px;
+  margin-top: 60px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+.dashvector
+{
+  width: 360px;
+  height: 250px;
+  margin-left: 620px;
+  margin-top: -60px;
+}
+
+.nav-icon{
+  color: #003049;
+  font-size: 35px;
+  margin-left: 25px;
+  margin-top: -12px;
+}
+
+.dashboardside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.dashboardside:hover
+{
+    background-color: #c8c19c;
+    
     width: 100%;
-  }
-  .logo{
-    width: 200px;
-    height: 180px;
-    padding-top: 40px;
-    margin-left: 40px;
-  }
-  .nav-icon{
-    color: #003049;
-    font-size: 35px;
-    margin-left: 25px;
-    margin-top: -12px;
-  }
-  .dashboardside{
-    margin-left: 0px;
-    margin-top: 30px;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
     text-align: justify;
-  }
-  
-  .dashboardside:hover
-  {
-      background-color: #c8c19c;
-      
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
-  
-  .dashboard-btn{
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 25px;
-    text-decoration: none;
-  }
-  
-  .bookingside{
-    margin-left: 0px;
-    margin-top: 30px;
+}
+
+.dashboard-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+  text-decoration: none;
+}
+
+.bookingside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.bookingside:hover
+{
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
     text-align: justify;
-  }
-  
-  .bookingside:hover
-  {
-      background-color: #c8c19c;
-      
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
-  
-  .booking-btn{
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 25px;
-  }
-  
-  .profileside{
-    margin-left: 0px;
-    margin-top: 30px;
+}
+
+.booking-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
+.profileside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.profileside:hover
+{
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
     text-align: justify;
-  }
+}
+
+.profile-btn
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+.spacer{
+  flex: 1 1 auto;
+}
+.inboxicon
+{
+  font-size: 30px;
+  color: #14213D;
+  margin-right: 20px;
+}
+.logoutBtn
+{
+  font-size: 20px;
+  color: antiquewhite;
+}
+.logoutBtn:hover{
+  background-color: black;
+}
+
+.header
+{
+  width: 100%;
+  height: fit-content;
+  margin-top: 0;
+}
+
+.backtxt
+{
+color: #003049;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-size: 13px;
+margin-top: -25px;
+margin-left: 50px;
+
+}
+
+.servicetype
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  text-align: center;
+}
+
+.summary
+{
+  width: 560px;
+  height: 600px;
+  margin-left: 200px;
+  margin-top: 20px;
+}
+.title
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  margin-top: -25px;
+  margin-left: 40px;
+}
+
+.icon
+{
+  color: #003049;
+  font-size: 30px;
+  margin-top: 5px;
+  margin-left: 20px;
+}
+.personalinfo
+{
+  margin-top: 50px;
+}
+
+.personalinfotxt
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  margin-top: -25px;
+  margin-left: 20px;
+}
+
+.fname
+{
+  margin-left: 20px;
   
-  .profileside:hover
-  {
-      background-color: #c8c19c;
-      
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
+}
+
+.lname
+{
+  margin-left: 70px;
+}
+
+.number
+{
+  margin-left: 80px;
+}
+
+.addressinfo
+{
+  margin-top: 70px;
+}
+
+.address
+{
+  margin-left: 20px;
+}
+
+.city
+{
+  margin-left: 90px;
+}
+
+.property
+{
+  margin-left: 90px;
+}
+
+.zipcode
+{
+  margin-left: 80px;
+}
+
+.serviceinfotxt
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  margin-top: 85px;
+  margin-left: 20px;
+}
+
+.appliance
+{
+  margin-left: 20px;
+}
+
+.brand
+{
+  margin-left: 90px;
+}
+
+.unittype
+{
+  margin-left: 90px;
+}
+
+.unitprob
+{
+  margin-top: 70px;
+}
+
+.unitproblem
+{
+  margin-left: 20px;
   
-  .profile-btn
-  {
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 25px;
-  }
+}
+
+.datetimeinfo
+{
+  margin-top: 70px;
+}
+
+
+.date
+{
+  margin-left: 20px;
+}
+
+.time
+{
+  margin-left: 90px;
+}
+
+.reschedBtn
+{
+  width: 160px;
+  height: 40px;
+  border-color: #F77F00;
+  color: #F77F00;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+  float: right;
+  margin-right: 20px;
+  margin-top: 40px;
+}
+
+.cancelBtn
+{
+  width: 120px;
+  height: 40px;
+  border-color: #D62828;
+  color: #D62828;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 13px;
+  float: right;
+  margin-right: 20px;
+  margin-top: -30px;
+}
+
+.pendingtxt
+{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 23px;
+  color: #F77F00;
+  float: right;
+  margin-right: 20px;
+  padding-top: 50px;
+}
+
+.pendingvector
+{
+  width: 230px;
+  height: 250px;
+  float: right;
+  margin-right: 300px;
+  padding-top: 10px;
   
-  .spacer{
-    flex: 1 1 auto;
-  }
-  .inboxicon
-  {
-    font-size: 30px;
-    color: #14213D;
-    margin-right: 20px;
-  }
-  .logoutBtn
-  {
-    font-size: 20px;
-    color: antiquewhite;
-  }
-  .logoutBtn:hover{
-    background-color: black;
-  }
+}
+
+ .payment
+{
+  width: 450px;
+  height: 360px;
+  float: right;
+  margin-right: 320px;
+  margin-top: -392px;
+  
+}
+
+.paymentinfo
+{
+  margin-top: 70px;
+}
+
+
+.paymentinfotxt
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.payBtn
+{
+  width: 260px;
+  height: 45px;
+  background-color: #003049;
+  color: #FFFFFF;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+  float: right;
+  margin-right: 90px;
+  margin-top: 250px;
+}
+    
+
