--- a/src/app/electricfandetails/electricfandetails.component.css
+++ b/src/app/electricfandetails/electricfandetails.component.css
@@ -15,36 +15,107 @@
     width: 100%;
   }
   .logo{
-    width: 200px;
-    height: 180px;
+    width: 180px;
+    height: 150px;
     padding-top: 40px;
-    margin-left: 40px;
+    margin-left: 55px;
   }
+  
+  .dashtitle
+  {
+    color: #003049;
+    font-size: 25px;
+    margin-left: 80px;
+    margin-top: 60px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  
+  }
+  
+  .dashvector
+  {
+    width: 360px;
+    height: 250px;
+    margin-left: 620px;
+    margin-top: -60px;
+  }
+  
   .nav-icon{
     color: #003049;
     font-size: 35px;
     margin-left: 25px;
+    margin-top: -12px;
   }
-  .nav-btn{
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 25px;
-    margin-left: 25px;
-  }
+  
   .dashboardside{
     margin-left: 0px;
     margin-top: 30px;
     text-align: justify;
   }
+  
   .dashboardside:hover
   {
       background-color: #c8c19c;
-      align-self: auto;
+      
       width: 100%;
       height: 70px;
       margin-left: 0;
       margin-top: 20px;
       text-align: justify;
+  }
+  
+  .dashboard-btn{
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    margin-left: 25px;
+    text-decoration: none;
+  }
+  
+  .bookingside{
+    margin-left: 0px;
+    margin-top: 30px;
+    text-align: justify;
+  }
+  
+  .bookingside:hover
+  {
+      background-color: #c8c19c;
+      width: 100%;
+      height: 70px;
+      margin-left: 0;
+      margin-top: 20px;
+      text-align: justify;
+  }
+  
+  .booking-btn{
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    margin-left: 25px;
+  }
+  
+  .profileside{
+    margin-left: 0px;
+    margin-top: 30px;
+    text-align: justify;
+  }
+  
+  .profileside:hover
+  {
+      background-color: #c8c19c;
+      width: 100%;
+      height: 70px;
+      margin-left: 0;
+      margin-top: 20px;
+      text-align: justify;
+  }
+  
+  .profile-btn
+  {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    margin-left: 25px;
   }
   .stepper
   {
@@ -246,7 +317,6 @@
     color: #FFFFFF;
     width: 100px;
     height: 50px;
-    margin-left: 180px;
     float: left;
   }
   
@@ -259,7 +329,6 @@
     color: #FFFFFF;
     width: 100px;
     height: 50px;
-    margin-right: 180px;
     float: right;
   }
   
@@ -454,8 +523,6 @@
     padding: 10px;
   }
   
-
-
 .electricfanselect
 {
     margin-left: 40px;
